crates/toml_edit/tests/snapshots/invalid/inline-table/empty-03.stderr
TOML parse error at line 1, column 6
  |
1 | t = {
  |      ^
newlines are unsupported in inline tables, expected nothing
